[package]
name = "prompt-helper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "prompt-helper"
path = "src/main.rs"

[dependencies]
shared-types = { path = "../shared-types" }
qollective = { workspace = true, features = [
    "nats-server",    # For NatsServer infrastructure
    "mcp-server",     # MCP server capabilities and McpData types
    "nats",           # NATS transport layer
    "tls",            # TLS support for NATS
    "config",         # Configuration support
    "tracing"         # Observability
]}
rmcp = { workspace = true }
rmcp-macros = { workspace = true }
async-nats = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
dotenvy = { workspace = true }
figment = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rig-core = { workspace = true }
reqwest = "0.12"
nkeys = "0.4"
chrono = { workspace = true }
futures-util = "0.3"

[dev-dependencies]
shared-types = { path = "../shared-types", features = ["mocking"] }
qollective = { workspace = true, features = [
    "nats-client",    # For NatsClient in integration tests
]}
mockall = { workspace = true }
futures-util = "0.3"
uuid = { workspace = true }
