[package]
name = "prompt-helper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "prompt-helper"
path = "src/main.rs"

[dependencies]
shared-types = { path = "../shared-types" }
shared-types-llm = { path = "../shared-types-llm" }
qollective = { workspace = true, features = [
    "nats-server",    # For NatsServer infrastructure
    "mcp-server",     # MCP server capabilities and McpData types
    "nats",           # NATS transport layer
    "tls",            # TLS support for NATS
    "config",         # Configuration support
    "tracing"         # Observability
]}
rmcp = { workspace = true }
async-nats = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
dotenvy = { workspace = true }
figment = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
chrono = { workspace = true }
futures-util ={ workspace = true }

[dev-dependencies]
shared-types = { path = "../shared-types", features = ["mocking"] }
qollective = { workspace = true, features = [
    "nats-client",    # For NatsClient in integration tests
]}
futures-util =  { workspace = true }
uuid = { workspace = true }
tempfile = { workspace = true }
