[package]
name = "shared-types"
version = "0.1.0"
edition = "2021"

[features]
# Mocking feature for test support
mocking = ["mockall"]
# Test utilities for envelope testing
test-utils = []

[dependencies]
# Generated types
shared-types-generated = { path = "../shared-types-generated" }

serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
jsonschema = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
qollective = { workspace = true, features = [
    "nats"  # NATS types and utilities (envelope is built-in)
]}
dotenvy = { workspace = true }
lazy_static = { workspace = true }
async-nats = { workspace = true }
nkeys = "0.4"
tokio = { workspace = true }
async-trait = { workspace = true }
rmcp = { workspace = true }

# Optional dependencies (enabled by features)
mockall = { workspace = true, optional = true }

[dev-dependencies]
mockall = { workspace = true }
