[package]
name = "story-generator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "story-generator"
path = "src/main.rs"

[dependencies]
shared-types = { path = "../shared-types" }
shared-types-llm = { path = "../shared-types-llm" }
qollective = { workspace = true, features = [
    "mcp-server",  # MCP server capabilities
    "nats",        # NATS transport layer
    "tls",         # TLS support for NATS
    "config",      # Configuration support
    "tracing"      # Observability
]}
rmcp = { workspace = true }
rmcp-macros = { workspace = true }
rig-core = { workspace = true }
tokio = { workspace = true }
async-nats = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
dotenvy = { workspace = true }
figment = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
