[package]
name = "desktop"
version = "1.5.0"
description = "Starter template for Nuxt 4 and Tauri 2"
authors = [ "NicolaSpadari" ]
license = "MIT"
repository = "https://github.com/NicolaSpadari/nuxtor"
edition = "2021"

[lib]
name = "nuxtor_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies.tauri-build]
version = "2.4.1"
features = [ ]

[dependencies]
tauri-plugin-shell = "2.3.1"
tauri-plugin-notification = "2.3.1"
tauri-plugin-os = "2.3.1"
tauri-plugin-fs = "2.4.2"
tauri-plugin-store = "2.4.0"
tauri-plugin-dialog = "2.4.0"
serde_json = "1"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
async-nats = "0.42"
thiserror = "2.0"
futures = "0.3"
tokio = { version = "1", features = ["sync"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.2"
shared-types-generated = { path = "../../shared-types-generated" }
qollective = { workspace = true }
rmcp = { workspace = true }
uuid = { workspace = true }

[dependencies.tauri]
version = "2.8.5"
features = [
  "tray-icon",
  "unstable"
]

[dependencies.serde]
version = "1"
features = [ "derive" ]

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
