[package]
name = "desktop"
version = "1.5.0"
description = "Basic template for Nuxt 4 and Tauri 2"
authors = [ "ms@jocax.com" ]
license = "MIT"
repository = "https://github.com/jocax/qollective"
edition = "2021"

[lib]
name = "nuxtor_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies.tauri-build]
version = "2.4.1"
features = [ ]

[dependencies]
tauri-plugin-shell = "2.3.1"
tauri-plugin-notification = "2.3.1"
tauri-plugin-os = "2.3.1"
tauri-plugin-fs = "2.4.2"
tauri-plugin-store = "2.4.0"
tauri-plugin-dialog = "2.4.0"
serde_json = "1"
walkdir = "2"
chrono = { version = "0.4", features = [ "serde" ] }
async-nats = "0.42"
thiserror = "2.0"
futures = "0.3"
tokio = { version = "1", features = [ "sync" ] }
rustls = { version = "0.23", features = [ "ring" ] }
rustls-pemfile = "2.2"
shared-types-generated = { path = "../../shared-types-generated" }
qollective = { workspace = true }
rmcp = { workspace = true }
uuid = { workspace = true }
toml = "0.8"
dotenv = "0.15"
async-trait = "0.1"
once_cell = "1.20"

[dependencies.tauri]
version = "2.8.5"
features = [
  "tray-icon",
  "unstable"
]

[dependencies.serde]
version = "1"
features = [ "derive" ]

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread"
] }
mockall = "0.13"
tokio-test = "0.4"
